--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -9230,45 +9230,58 @@ more often in the undefined region.
 \newcommand{\dSCALE}{d_{\rm scale}}
 \newcommand{\Fdata}{F_{\rm data}^i}
 \newcommand{\Fmodel}{F_{\rm model}^i}
+\newcommand{\fluxScale}{S_{F}}
+
 
 For SN-only photo-$z$ fits, \minuit\ is likely to find a
 local minimum, rather than the global minimum. It is therefore
 important to provide initial parameter estimates before the
 \minuit\ stage. 
-After using the recommended {\tt OPT\_SETPKMJD=21} (Fmax-clump+BazinFit)
+After using the recommended {\tt OPT\_SETPKMJD=20} (Fmax-clump)
 to estimate {\tt PEAKMJD},
 there are two user-options for estimating initial parameters:
 \begin{verbatim}
    &FITINP
      ISCALE_COURSEBIN_PHOTOZ = 1   # multi-dim grid search (default)
         ! or
-     NEVAL_MCMC_PHOTOZ       = 300 # MCMC burn-in with 300 evaluations
+     NEVAL_MCMC_PHOTOZ       = 300 # MCMC burn-in with 300 evaluations (not ready)
 \end{verbatim} 
 %
-The default opton performs a multi-dimensional grid-search over 
+The default opton performs a 3D grid-search over 
 redshift (0.04 bin-width), color (4 bins) and stretch/shape (3 bins).
 The distance parameter is estimated analytically as follows.
 For each grid point (photoZ, color, shape) the model fluxes
 are first evaluated using the distance
 (SALT2-$\bar{x_0}$ or distance modulus $\bar\mu$) 
 calculated from a reference set of cosmological parameters. 
-To minimize the $\chi^2$ w.r.t. the
-distance parameter, a distance-scale 
-is determined as
-\begin{equation}
-  \dSCALE = x_0/\bar{x_0} {\rm ~~~ or~~~} 10^{0.4(\mu-\bar{\mu})}
-    = \sum_i( \Fdata\Fmodel/\sigma_i^2) / \sum_i(\Fmodel/\sigma_i)^2
-\end{equation}
+Next we define a flux-scale,
+$\fluxScale = x_0/\bar{x_0} = 10^{0.4(\mu-\bar{\mu})}$.
+%
+The chi-squared is
+ $\chi^2 = \sum_i [\Fdata - \fluxScale\Fmodel]^2/\sigma_i^2$,
 where $\sigma_i$ is the quadrature sum of data and model errors
-and '$i$' is the epoch index.\footnote{See {\tt R4SN\_FFSUM\_XXX} 
+and '$i$' is the epoch index.\footnote{See {\tt R4SN\_FFSUM\_XXX}
    variables in {\tt snlc\_fit.F90}.}
+Analytical minimization is from setting $\partial \chi^2/\partial\fluxScale = 0$, 
+which results in
+%
+\begin{equation}
+  \fluxScale
+    = \sum_i( \Fdata\Fmodel/\sigma_i^2) / \sum_i(\Fmodel/\sigma_i)^2
+    \label{eq:fluxScale}
+\end{equation}
+%
 The resulting $x_0$ or $\mu$ value is used to re-evaluate
 the $\chi^2$ at this grid-point. 
-After finding these four parameter estimates, 
-{\tt PEAKMJD} is searched in 0.5~day bins ($-2$ to $+2$ days).
+The four initial values ($\Zphot$, color, stretch, distance)
+are set based on the minimum $\chi^2$ from the 3D loop over \{redshift,color,stretch\}. 
+A correction to the $\fluxScale$ formula (Eq.~\ref{eq:fluxScale})
+is needed when there is a cosmology prior
+(Eq.~\ref{eq:chi2_muprior} in \S~\ref{sss:zphot_cosmology_prior})
+but this has not yet been implemented.
+The last step  is a 1D {\tt PEAKMJD} searched in 0.5~day bins ($-2$ to $+2$ days).
 
-
-The second option (MCMC) processes all 5 parameters simultaneously.
+NOT READY: The second option (MCMC) processes all 5 parameters simultaneously.
 Initial {\tt STEP} sizes are 1/3 of the range, and every 20 evaluations
 the {\tt STEP} size is multiplied by 0.90. For each evaluation, the
 parameters are shifted by {\tt STEP}$\times(R_{01}-0.5)$,
@@ -9458,6 +9471,7 @@ the $\mu$-error for the photoZ at each fit-iteration.
 The $\chi^2$ prior term is
 \begin{equation}
    \chi_{\mu{\rm -prior}}^2 = \left[ \frac{ \Delta\mu  }{ \sigma_{\mu} \times {\rm\tt PRIOR\_MUERRSCALE} } \right]^2
+   \label{eq:chi2_muprior}
 \end{equation}
 %
 where 
