print more info for duplicate GALID

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -1428,6 +1428,7 @@ etc ...
   SIMLIB_NREPEAT:  nn     # repeat each LIBID nn times (for speed)
   SIMLIB_FIELDLIST xyz    # plus-separated list of field-substrings
   SIMLIB_MINSEASON nn     # remove seasons less than nn day duration
+  SIMLIB_MJD_SHIFT x.y     # shift every MJD; e.g., to overlap range of real images
   USE_SIMLIB_PEAKMJD:  1  # use peakMJD in header (if there)
   USE_SIMLIB_REDSHIFT: 1  # use redshift in header (if there)
   USE_SIMLIB_DISTANCE: 1  # use lumi-distance in header (invert to get zCMB)
